updated colors and fixed alignment for responsive view on the hour coloumn.

--- a/Develop/style.css
+++ b/Develop/style.css
@@ -15,15 +15,12 @@ textarea{
   color: #000000;
   border-left: 1px solid black;
   padding: 10px;
-  /* overflow-y: auto; */
 }
 
 .jumbotron {
   text-align: center;
   background-color: transparent;
-  /* color: black; */
   border-radius: 0;
-  /* border-bottom: 10px solid black; */
   border-bottom: 10px solid;
 }
 
@@ -39,7 +36,6 @@ textarea{
 .row {
   white-space: pre-wrap;
   height: 80px;
-  /* border-top: 1px solid white; */
   border-top: 1px solid;
 }
 
@@ -48,7 +44,6 @@ textarea{
   color: #000000;
   /* border-top: 1px dashed #000000; */
   border-top: 1px solid #000000;
-
 }
 
 .task {
@@ -62,19 +57,17 @@ textarea{
 
 .present {
   background-color: #ff6961;
-  /* color: white; */
 }
 
 .future {
-  background-color: #77dd77;
-  /* color: white; */
+  background-color: #62C462;
 }
 
 .saveBtn {
   border-left: 1px solid black;
   border-top-right-radius: 15px;
   border-bottom-right-radius: 15px;
-  background-color: #06AED5;
+  background-color: #7A8288;
   color: white;
 }
 
@@ -91,7 +84,9 @@ textarea{
     color: #aaa;
   }
   .hour {
-  padding-left: 0px;
+    text-align: center;
+    padding-left: 1px;
+    font-size: 12px;
   }
 
 }
